[package]
name = "ocean"
version = "0.1.2"
authors = ["Alexis Fontaine <alexis.fontaine@outlook.com>"]
edition = "2018"
description = "An experimental design system made for fun with Rust front-end framework Yew"
homepage = "https://ocean.alexif.net"
repository = "https://github.com/alexisfontaine/ocean"

[lib]
path = "main.rs"

[features]
code = ["ocean-macros/code"]
router = []
story = ["code"]

[dependencies]
web-sys = "0.3"
yew = "0.17"
yew-router = { version = "0.14", default-features = false, features = ["agent", "web_sys"] }
ocean-macros = { path = "../macros" }
