[package]
name = "ocean-macros"
version = "0.1.1"
authors = ["Alexis Fontaine <alexis.fontaine@outlook.com>"]
edition = "2018"
description = "An experimental design system made with Rust front-end framework Yew"

[lib]
path = "main.rs"
proc-macro = true

[features]
code = ["syntect"]

[dependencies]
quote = "1"
syn = "1"

[dependencies.syntect]
default-features = false
features = ["assets", "dump-load", "html", "parsing", "regex-fancy"]
optional = true
version = "4"
